Update CSS styles and add horizontalBars class to Header component

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,3 +6,11 @@
   background-color: #ffffff;
   border-bottom: 1px solid #333333;
 }
+
+.horizontalBars {
+    color: #ffffff;
+  }
+  
+  .horizontalBars:hover {
+    color: #929292;
+  }
